--- a/index.html
+++ b/index.html
@@ -2,10 +2,49 @@
 
 <html>
   <head>
-
+    <title>
+      Konrad Zuse
+    </title>
   </head>
 
   <body>
+    <h1>
+      Welcome to a website dedicated to the history of Konrad Zuse
+    </h1>
+    
+      <ol>
+        <li>
+      Who was Konrad Zuse?
+        </li>
+
+        <li>
+        The History
+        </li>
+
+        <li>
+      Significance
+        </li>
+
+        <li>
+      Sources
+        </li>
+        
+      </ol>
+
+    <h2>
+      Who was Konrad Zuse?
+    </h2>
+
+  <p>
+    Full name Konrad Ernst Otto Zuse, Konrad was a German civil engineer who is primarily known for creating the first programmable computer. 
+  </p>
+
+  <p>
+    He was born in Berlin, Germany on June 22, 1910 and attended the Collegium Hosianum in Braunsberg. He enrolled at the 
+    <a href="https://en.wikipedia.org/wiki/Technische_Universit%C3%A4t_Berlin" target="_blank">Technische Hochschule Berlin 
+    </a> 
+  and studied both engineering and architecture, which he found incredibly boring. Zuse graduated from civil engineering in 1939.
+  </p>
 
   </body>
 
