--- a/pages/history.html
+++ b/pages/history.html
@@ -21,11 +21,23 @@
         </p>
 
         <h3>
-            The Z1
+            The Z1 (1935-1944)
         </h3>
 
         <p>
             After quitting his job in 1935, Zuse began to experiment with the construction of the Z1 in his parents' apartment. His first attempt was produced in 1936 which resulted in a floating-point binary mechanical calculator. The Z1 had little programmability and read instructions from perforated 35 mm film.
+        </p>
+
+        <p>
+            He completed the construction of the Z1 in 1938. Unfortunately, the Z1 which contained around 30,000 metal parts, never worked due to insufficient mechanical precision. The end of the Z1 was on the 30th of January 1944 following the British air raids in the Second World War when his parents' apartment and neighbouring buildings were destroyed. Both the Z1 and its original blueprints were destroyed.
+        </p>
+
+        <h3>
+            The Z2 (1939-1940)
+        </h3>
+
+        <p>
+            After being called to military service in 1939, Zuse was given the resources to construct the Z2, a digital computer which shared similar mechanical memory to the Z1. The Z2 
         </p>
 
     </body>
