--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </li>
 
         <li>
-      Significance
+          <a href="http://127.0.0.1:3000/pages/significance.html">Significance</a>
         </li>
 
         <li>
@@ -45,6 +45,10 @@
     <a href="https://en.wikipedia.org/wiki/Technische_Universit%C3%A4t_Berlin" target="_blank">Technische Hochschule Berlin 
     </a> 
   and studied both engineering and architecture, which he found incredibly boring. Zuse graduated from civil engineering in 1939.
+  </p>
+
+  <p>
+    During his time, Konrad Zuse has also introduced Calculating Space theory (digital physics), created the coding language known as “Plankalkul” to program the Z4, and founded an early computer business, and created the Z3 with the help of his co-worker, <a href="https://en.wikipedia.org/wiki/Helmut_Schreyer" target="_blank">Helmut Schreyer</a>.
   </p>
 
   </body>
