--- a/pages/history.html
+++ b/pages/history.html
@@ -33,11 +33,17 @@
         </p>
 
         <h3>
-            The Z2 (1939-1940)
+            The Z2 (1939-1944)
         </h3>
 
         <p>
-            After being called to military service in 1939, Zuse was given the resources to construct the Z2, a digital computer which shared similar mechanical memory to the Z1. The Z2 
+            After being called to military service in 1939, Zuse was given the resources to construct the Z2, a digital computer which shared similar mechanical memory to the Z1. The Z2 used telephone relays and punch cards as storage. It was destroyed along with the blueprints and the Z1.
         </p>
 
+        <h3>
+            The Z3 and Z4
+        </h3>
+
+        <p>
+            With plans from 1938 and funding from the German government, Konrad Zuse began working on the Z3 in 1941, improving on the basic Z2 machine. More information on the Z3 is available in <a href="http://127.0.0.1:3000/pages/significance.html">Significance</a>.
     </body>
