--- a/pages/significance.html
+++ b/pages/significance.html
@@ -6,3 +6,17 @@
             Significance
         </title>
     </head>
+
+    <body>
+        <h1>
+            The significance of the Z3 in history
+        </h1>
+
+        <h3>
+            How the Z3 works
+        </h3>
+
+        <p>
+            The Z3 was designed in 1938 and completed in 1941 in Berlin and is known as the world’s first working programmable and fully automatic digital computer.
+        </p>
+    </body>
