--- a/pages/history.html
+++ b/pages/history.html
@@ -45,5 +45,10 @@
         </h3>
 
         <p>
-            With plans from 1938 and funding from the German government, Konrad Zuse began working on the Z3 in 1941, improving on the basic Z2 machine. More information on the Z3 is available in <a href="http://127.0.0.1:3000/pages/significance.html">Significance</a>.
+            With plans from 1938 and funding from the German government, Konrad Zuse began working on the Z3 in 1941, improving on the basic Z2 machine. More information on the Z3 is available in <a href="http://127.0.0.1:3000/pages/significance.html">Significance</a>. 
+        </p>
+
+        <p>
+            The Z4 was the final development of the Z3. Being very similar to the Z3, the Z4 used 32-bit floating point words. The Z4 was shipped off to Göttingen from Berlin to prevent it from falling into Soviet hands during the war.
+        </p>
     </body>
