--- a/pages/significance.html
+++ b/pages/significance.html
@@ -19,4 +19,41 @@
         <p>
             The Z3 was designed in 1938 and completed in 1941 in Berlin and is known as the world’s first working programmable and fully automatic digital computer.
         </p>
+
+        <h3>
+            Specifications
+        </h3>
+
+        <ul>
+            <li>
+                Built with 2,600 relays
+            </li>
+            <li>
+                22-bit word length
+            </li>
+            <li>
+                Operated on a clock frequency of 5-10 Hz
+            </li>
+            <li>
+                 Program code was stored on punched film and values were entered manually
+            </li>
+            <li>
+                Calculation speeds; 0.8 for addition, 3 seconds for multiplication
+            </li>
+            <li>
+                    Binary floating-point, 22-bit, add, subtract, multiply, divide, square root
+            </li>
+            <li>
+                 Power consumption: Around 4,000 watts
+            </li>
+        </ul>
+
+        <p>
+            The Z3 worked as a stack machine, containing two registers known as R1 and R2. Konrad Zuse asked the German government for funding to upgrade the relays to electronic switches, but was denied due to his project being deemed “not war-important”.
+        </p>
+
+        <p>
+            The original Z3 was destroyed on December 21, 1943 due to Allied bombardment on Berlin. Fortunately, a replica of the Z3 was made and is available on display in the Deutsches Museum. In 1998, the Z3 was demonstrated to be initially <a href="https://en.wikipedia.org/wiki/Turing_completeness" target="_blank">Turing-complete</a>, but because of its lack of conditional branching, the Z3 only meets the definition by speculatively computing all possible outcomes of a calculation.
+        </p>
+
     </body>
