--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </li>
 
         <li>
-      Sources
+      <a href="http://127.0.0.1:3000/pages/sources.html">Sources</a>
         </li>
         
       </ol>
@@ -48,8 +48,10 @@
   </p>
 
   <p>
-    During his time, Konrad Zuse has also introduced Calculating Space theory (digital physics), created the coding language known as “Plankalkul” to program the Z4, and founded an early computer business, and created the Z3 with the help of his co-worker, <a href="https://en.wikipedia.org/wiki/Helmut_Schreyer" target="_blank">Helmut Schreyer</a>.
+    During his time, Konrad Zuse has also introduced Calculating Space theory (digital physics), created the coding language known as “Plankalkul”, founded an early computer business, and created the Z3 with the help of his co-worker, <a href="https://en.wikipedia.org/wiki/Helmut_Schreyer" target="_blank">Helmut Schreyer</a>.
   </p>
+
+  <iframe width="500" height="300" src="https://www.youtube.com/embed/3WNFBjoJbBA" title="Who is Konrad Zuse? Meet the Man Behind the Programmable Computer and Plankalkül" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
   </body>
 
