--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       Who was Konrad Zuse?
     </h2>
 
+    <h4>
+      "The danger of computers becoming like humans is not as great as the danger of humans becoming like computers.” - Konrad Zuse
+    </h4>
+
   <p>
     Full name Konrad Ernst Otto Zuse, Konrad was a German civil engineer who is primarily known for creating the first programmable computer. 
   </p>
