--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </li>
 
         <li>
-          <a href="http://127.0.0.1:3000/pages/history.html">The History</a>
+          <a href="./pages/history.html">The History</a>
         </li>
 
         <li>
-          <a href="http://127.0.0.1:3000/pages/significance.html">Significance</a>
+          <a href="./pages/significance.html">Significance</a>
         </li>
 
         <li>
-      <a href="http://127.0.0.1:3000/pages/sources.html">Sources</a>
+      <a href="./pages/sources.html">Sources</a>
         </li>
         
       </ol>
