--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       Who was Konrad Zuse?
     </h2>
 
+    <img src="./images/young_konrad_zuse.jpeg">
+
     <h4>
       "The danger of computers becoming like humans is not as great as the danger of humans becoming like computers.” - Konrad Zuse
     </h4>
