--- a/pages/history.html
+++ b/pages/history.html
@@ -20,9 +20,13 @@
             After graduating, Konrad Zuse went to work for the Henschel Aircraft Company in Berlin. His job required many routine calculations by hand, leading him to think of better and more effective ways of completing such equations. He considered a machine that would help with calculations, and this would lead to the construction of the Z1.
         </p>
 
+        <img src="../images/konrad_working.jpg">
+
         <h3>
             The Z1 (1935-1944)
         </h3>
+
+        <img src="../images/z1.jpg">
 
         <p>
             After quitting his job in 1935, Zuse began to experiment with the construction of the Z1 in his parents' apartment. His first attempt was produced in 1936 which resulted in a floating-point binary mechanical calculator. The Z1 had little programmability and read instructions from perforated 35 mm film.
