--- a/pages/significance.html
+++ b/pages/significance.html
@@ -16,7 +16,7 @@
             How the Z3 works
         </h3>
 
-        <img src="../images/timeline_computers_1941.zusez3.jpg">
+        <img src="../images/timeline_computers_1941.zusez3.jpg" width="300px">
 
         <p>
             The Z3 was designed in 1938 and completed in 1941 in Berlin and is known as the world’s first working programmable and fully automatic digital computer.
@@ -58,6 +58,6 @@
             The original Z3 was destroyed on December 21, 1943 due to Allied bombardment on Berlin. Fortunately, a replica of the Z3 was made and is available on display in the Deutsches Museum. In 1998, the Z3 was demonstrated to be initially <a href="https://en.wikipedia.org/wiki/Turing_completeness" target="_blank">Turing-complete</a>, but because of its lack of conditional branching, the Z3 only meets the definition by speculatively computing all possible outcomes of a calculation.
         </p>
 
-        <img src="../images/konrad_photo.jpg">
+        <img src="../images/konrad_photo.jpg" width="300px">
 
     </body>
