--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>
       Konrad Zuse
     </title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
@@ -41,7 +42,7 @@
     <h4>
       "The danger of computers becoming like humans is not as great as the danger of humans becoming like computers.” - Konrad Zuse
     </h4>
-
+<hr>
   <p>
     Full name Konrad Ernst Otto Zuse, Konrad was a German civil engineer who is primarily known for creating the first programmable computer. 
   </p>
