--- a/pages/significance.html
+++ b/pages/significance.html
@@ -5,6 +5,7 @@
         <title>
             Significance
         </title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
