--- a/pages/history.html
+++ b/pages/history.html
@@ -5,6 +5,7 @@
         <title>
             The History
         </title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
