--- a/pages/sources.html
+++ b/pages/sources.html
@@ -5,6 +5,7 @@
         <title>
             Sources
         </title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
