--- a/pages/history.html
+++ b/pages/history.html
@@ -50,7 +50,7 @@
         </h3>
 
         <p>
-            With plans from 1938 and funding from the German government, Konrad Zuse began working on the Z3 in 1941, improving on the basic Z2 machine. More information on the Z3 is available in <a href="http://127.0.0.1:3000/pages/significance.html">Significance</a>. 
+            With plans from 1938 and funding from the German government, Konrad Zuse began working on the Z3 in 1941, improving on the basic Z2 machine. More information on the Z3 is available in <a href="../pages/significance.html">Significance</a>. 
         </p>
 
         <p>
